# libewf_64bit

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  README  README.md  aclocal.m4  configure  configure.ac  libewf.20130416.nuspec  libewf.pc.in  libewf.spec  libewf.spec.in  libewf.targets
borlandc/: Makefile.in
common/: Makefile.in  common.h  config.h  config.h.in  types.h
documents/: Makefile.in
dpkg/: changelog  copyright
ewf.net/: Makefile.in  ewf.net.rc
ewftools/: Makefile.in  ewfinput.c  ewfinput.h  export_handle.c  imaging_handle.c  info_handle.c
examples/: Makefile.am  Makefile.in
examples/ewf.net/: Glob.vb  MD5sum.vb  OpenClose.vb
examples/libewf/: open_close.c
examples/pyewf/: file_entries.py  glob.py  metadata.py  open_close.py
include/: Makefile.in  libewf.h  libewf.h.in
libbfio/: Makefile.am  Makefile.in  libbfio_codepage.h  libbfio_definitions.h  libbfio_error.c  libbfio_error.h  libbfio_extern.h  libbfio_file.c  libbfio_file.h  libbfio_file_pool.c  libbfio_file_pool.h  libbfio_file_range.c  libbfio_file_range.h  libbfio_handle.c  libbfio_handle.h  libbfio_legacy.c  libbfio_legacy.h  libbfio_libcdata.h  libbfio_libcerror.h  libbfio_libcfile.h  libbfio_libclocale.h  libbfio_libcpath.h  libbfio_libcstring.h  libbfio_libuna.h  libbfio_memory_range.c  libbfio_memory_range.h  libbfio_pool.c  libbfio_pool.h  libbfio_support.c  libbfio_support.h  libbfio_types.h  libbfio_unused.h
libcaes/: Makefile.am  Makefile.in  libcaes_context.c  libcaes_context.h  libcaes_crypt.c  libcaes_crypt.h  libcaes_definitions.h  libcaes_error.c  libcaes_error.h  libcaes_extern.h  libcaes_key.c  libcaes_key.h  libcaes_libcerror.h  libcaes_libcstring.h  libcaes_support.c  libcaes_support.h  libcaes_types.h  libcaes_unused.h
libcdata/: Makefile.am  Makefile.in  libcdata_array.c  libcdata_array.h  libcdata_btree.c  libcdata_btree.h  libcdata_definitions.h  libcdata_extern.h  libcdata_libcerror.h  libcdata_libcstring.h  libcdata_list.c  libcdata_list.h  libcdata_list_element.c  libcdata_list_element.h  libcdata_range_list.c  libcdata_range_list.h  libcdata_support.c  libcdata_support.h  libcdata_tree_node.c  libcdata_tree_node.h  libcdata_types.h  libcdata_unused.h
libcerror/: Makefile.in  libcerror_definitions.h  libcerror_error.c  libcerror_error.h  libcerror_extern.h  libcerror_libcstring.h  libcerror_support.c  libcerror_support.h  libcerror_system.c  libcerror_system.h  libcerror_types.h  libcerror_unused.h
libcfile/: Makefile.in  libcfile_definitions.h  libcfile_error.c  libcfile_error.h  libcfile_extern.h  libcfile_file.c  libcfile_file.h  libcfile_libcerror.h  libcfile_libclocale.h  libcfile_libcnotify.h  libcfile_libcstring.h  libcfile_libuna.h  libcfile_notify.c  libcfile_notify.h  libcfile_stream.c  libcfile_stream.h  libcfile_support.c  libcfile_support.h  libcfile_types.h  libcfile_unused.h
libclocale/: Makefile.in  libclocale_codepage.c  libclocale_codepage.h  libclocale_definitions.h  libclocale_extern.h  libclocale_libcerror.h  libclocale_libcstring.h  libclocale_locale.c  libclocale_locale.h  libclocale_support.c  libclocale_support.h  libclocale_unused.h
libcnotify/: Makefile.am  Makefile.in  libcnotify_definitions.h  libcnotify_extern.h  libcnotify_libcerror.h  libcnotify_libcstring.h  libcnotify_print.c  libcnotify_print.h  libcnotify_stream.c  libcnotify_stream.h  libcnotify_unused.h  libcnotify_verbose.c  libcnotify_verbose.h
libfvalue/: Makefile.am  Makefile.in  libfvalue_binary_data.c  libfvalue_binary_data.h  libfvalue_codepage.h  libfvalue_data_handle.c  libfvalue_data_handle.h  libfvalue_definitions.h  libfvalue_error.c  libfvalue_error.h  libfvalue_extern.h  libfvalue_floating_point.c  libfvalue_floating_point.h  libfvalue_integer.c  libfvalue_integer.h  libfvalue_libcdata.h  libfvalue_libcerror.h  libfvalue_libcnotify.h  libfvalue_libcstring.h  libfvalue_libfdatetime.h  libfvalue_libfguid.h  libfvalue_libfwnt.h  libfvalue_libuna.h  libfvalue_split_string.c  libfvalue_split_string.h  libfvalue_string.c  libfvalue_string.h  libfvalue_support.c  libfvalue_support.h  libfvalue_table.c  libfvalue_table.h  libfvalue_types.h  libfvalue_unused.h  libfvalue_value.c  libfvalue_value.h  libfvalue_value_entry.c  libfvalue_value_entry.h  libfvalue_value_type.c  libfvalue_value_type.h
libhmac/: Makefile.am  Makefile.in  libhmac_byte_stream.h  libhmac_definitions.h  libhmac_error.c  libhmac_error.h  libhmac_extern.h  libhmac_libcerror.h  libhmac_md5.c  libhmac_md5.h  libhmac_sha1.c  libhmac_sha1.h  libhmac_sha256.c  libhmac_sha256.h  libhmac_support.c  libhmac_support.h  libhmac_types.h  libhmac_unused.h
libsmdev/: Makefile.am  Makefile.in  libsmdev_ata.c  libsmdev_ata.h  libsmdev_codepage.h  libsmdev_debug.c  libsmdev_debug.h  libsmdev_definitions.h  libsmdev_error.c  libsmdev_error.h  libsmdev_extern.h  libsmdev_handle.c  libsmdev_handle.h  libsmdev_libcdata.h  libsmdev_libcerror.h  libsmdev_libcfile.h  libsmdev_libclocale.h  libsmdev_libcnotify.h  libsmdev_libcstring.h  libsmdev_libuna.h  libsmdev_metadata.c  libsmdev_metadata.h  libsmdev_notify.c  libsmdev_notify.h  libsmdev_optical_disc.c  libsmdev_optical_disc.h  libsmdev_scsi.c  libsmdev_scsi.h  libsmdev_sector_range.c  libsmdev_sector_range.h  libsmdev_string.c  libsmdev_string.h  libsmdev_support.c  libsmdev_support.h  libsmdev_track_value.c  libsmdev_track_value.h  libsmdev_types.h  libsmdev_unused.h  libsmdev_usb.c  libsmdev_usb.h
libsmraw/: Makefile.am  Makefile.in  libsmraw_codepage.h  libsmraw_definitions.h  libsmraw_error.c  libsmraw_error.h  libsmraw_extern.h  libsmraw_filename.c  libsmraw_filename.h  libsmraw_handle.c  libsmraw_handle.h  libsmraw_information_file.c  libsmraw_information_file.h  libsmraw_legacy.c  libsmraw_legacy.h  libsmraw_libbfio.h  libsmraw_libcerror.h  libsmraw_libclocale.h  libsmraw_libcnotify.h  libsmraw_libcstring.h  libsmraw_libfcache.h  libsmraw_libfvalue.h  libsmraw_libmfdata.h  libsmraw_libuna.h  libsmraw_metadata.c  libsmraw_metadata.h  libsmraw_notify.c  libsmraw_notify.h  libsmraw_support.c  libsmraw_support.h  libsmraw_types.h  libsmraw_unused.h
(+397 files in other folders)
