EWF_NET_EXAMPLES = \
	ewf.net/Glob.vb \
	ewf.net/MD5sum.vb \
	ewf.net/OpenClose.vb

LIBEWF_EXAMPLES = \
	libewf/open_close.c

PYEWF_EXAMPLES = \
	pyewf/file_entries.py \
	pyewf/glob.py \
	pyewf/metadata.py \
	pyewf/open_close.py

EXTRA_DIST = \
	$(EWF_NET_EXAMPLES) \
	$(LIBEWF_EXAMPLES) \
	$(PYEWF_EXAMPLES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

